Start to Test Runner

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,6 @@ volatile = "0.2.6"
 bootloader = "0.9.22"
 lazy_static = { version = "1.0.0", features = ["spin_no_std"] }
 spin = "0.9.3"
+
+[package.metadata.bootimage]
+test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
